@@ -1501,9 +1501,9 @@ class RemoteRepository(_RpcHelper, lock._RelockDebugMixin):
         self._ensure_real()
         return self._real_repository.get_inventory_xml(revision_id)
 
-    def deserialise_inventory(self, revision_id, xml):
+    def _deserialise_inventory(self, revision_id, xml):
         self._ensure_real()
-        return self._real_repository.deserialise_inventory(revision_id, xml)
+        return self._real_repository._deserialise_inventory(revision_id, xml)
 
     def reconcile(self, other=None, thorough=False):
         self._ensure_real()
